--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
-body {
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,7 +13,128 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.pos-rel {
+  position: relative;
+}
+
+.editor {
+  min-width: 100vw;
+  min-height: 100vh;  
+  display: flex; 
+  background-image: linear-gradient(to top, #dfe9f3 0%, white 100%);
+}
+
+.toolbar {
+  background-color: #fff;
+  max-width: 300px;
+  width: 100%;
+  min-height: 100vh;
+  padding: 20px;
+  filter: drop-shadow(1px 0px 25px rgba(0,0,0, .12));
+}
+
+.upload-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+  width: 100%;
+  border-radius: 8px;
+  background-color: #edecec;
+  cursor: pointer;
+}
+
+.upload-img:hover {
+  background-color: #e1dfdf;
+}
+
+.upload-img input {
+  display: none;
+}
+
+.toolbar-item {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+.tool-label {
+  font-weight: bold;
+  font-size: 15px;
+  user-select: none;
+}
+
+.tool-input {
+  cursor: pointer;
+}
+
+.main {
+  /* background-color: #f7f7f7; */
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 25px;
+}
+
+.canvas-container {
+  min-width: 500px;
+  min-height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+canvas,
+#canvas {
+  max-width: 100%;
+  max-height: 90vh;
+  border-radius: 8px;
+  box-shadow: 0 0 30px -3px rgb(0 0 0 / 11%);
+}
+
+.download-image {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+.download-image svg {
+  width: 16px;
+  fill: #333;
+}
+
+.download-image:hover {
+  background-color: #edecec;
+}
+
+.close-image {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+.close-image:hover {
+  background-color: #edecec;
+}
+
+.close-image svg {
+  width: 10px;
+  fill: #333;
 }
